fixes issue with squishy inputs

--- a/components/vf-form__checkbox/vf-form__checkbox.scss
+++ b/components/vf-form__checkbox/vf-form__checkbox.scss
@@ -42,6 +42,7 @@
     content: '';
     display: inline-block;
     height: 1rem;
+    min-width: 1rem;;
     position: relative;
     top: 4px; // need to look at a better way to do this that keeps the semantics of a label
     width: 1rem;
@@ -62,12 +63,11 @@
     background-repeat: no-repeat;
     background-size: .75em;
     border-color: color(blue);
-
   }
+
   &:checked:hover + .vf-form__label::before,
   &:checked:focus + .vf-form__label::before {
-  box-shadow:
-    0 0 0 .125rem color(grey--dark)
+    box-shadow: 0 0 0 .125rem color(grey--dark)
   }
 
   // Disabled state .vf-form__label.
